Added winning conditions

--- a/Desafio-8-Layout-Jokenpo/index.html
+++ b/Desafio-8-Layout-Jokenpo/index.html
@@ -9,13 +9,13 @@
     <title>JoKenPo - HTC</title>
   </head>
   <body>
-    <h1 class="winner-title">Jogadora 1 ganhou!</h1>
+    <h1 class="winner-title">Resultado</h1>
 
       <section class="scoreboard-box">
         <span class="scoreboard-player">Jogadora 1</span>
-        <strong class="scoreboard-score">01</strong>
+        <strong class="scoreboard-score">00</strong>
         <strong class="scoreboard-vs">vs</strong>
-        <strong class="scoreboard-score">01</strong>
+        <strong class="scoreboard-score">00</strong>
         <span class="scoreboard-player">Jogadora 2</span>
       </section>
 
