--- a/Desafio-8-Layout-Jokenpo/index.html
+++ b/Desafio-8-Layout-Jokenpo/index.html
@@ -13,9 +13,9 @@
 
       <section class="scoreboard-box">
         <span class="scoreboard-player">Jogadora 1</span>
-        <strong class="scoreboard-score">00</strong>
+        <strong class="scoreboard-score score-player-1">00</strong>
         <strong class="scoreboard-vs">vs</strong>
-        <strong class="scoreboard-score">00</strong>
+        <strong class="scoreboard-score score-player-2">00</strong>
         <span class="scoreboard-player">Jogadora 2</span>
       </section>
 
@@ -23,7 +23,7 @@
       <div class="button-box">
         <button class="button button-play player-1-rock-button">Pedra</button>
         <button class="button button-play player-1-paper-button">Papel</button>
-        <button class="button button-play player-1-scissors-button">
+        <button class="button button-play player-1-scissor-button">
           Tesoura
         </button>
       </div>
@@ -35,7 +35,7 @@
       <div class="button-box">
         <button class="button button-play player-2-rock-button">Pedra</button>
         <button class="button button-play player-2-paper-button">Papel</button>
-        <button class="button button-play player-2-scissors-button">
+        <button class="button button-play player-2-scissor-button">
           Tesoura
         </button>
       </div>
